@@ -439,6 +439,7 @@ extern int			cb_exp_line;
 extern int			functions_are_all;
 extern struct cb_tree_common	*defined_prog_list;
 extern int			current_call_convention;
+extern struct cb_field		*configuration_field;
 
 /* Functions */
 
